# live-subtitle-translator

./: .gitignore  ARCHITECTURE.md  README.md  README_zh-TW.md  download_models.py  main.py  pyproject.toml  requirements.txt  requirements_frozen.txt  setup_models.bat  start.bat
src/: asr_engine.py  audio_capture.py  processor_numpy.py  translator.py  vad_engine.py
src/ui/: overlay.py  settings_window.py
