[project]
name = "live-subtitle-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.3",
    "deepl>=1.28.0",
    "faster-whisper>=1.1.0",
    "google-genai>=1.65.0",
    "numpy>=2.4.2",
    "onnxruntime>=1.24.2",
    "openvino>=2026.0.0",
    "pyaudiowpatch>=0.2.12.8",
    "pyside6>=6.10.2",
    "pyyaml>=6.0.3",
    "scipy>=1.14.0",
    "silero-vad>=6.2.1",
    "tokenizers>=0.22.2",
]
